--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <ul class="certs">
             <li>CompTIA A+ | Network+ | Security+ | Cloud+</li>
             <li>AWS Certified Cloud practitioner | Solutions Architect - Associate </li>
-            <li>Microsoft AZ-900 Azure Fundamentals</li>
+            <li>Microsoft AZ-900 Azure Fundamentals | AZ-204 Azure Developer - Associate</li>
             <li>ITIL 4 Foundation Certificate in IT Service Management</li>
             <li>LPI Linux Essentials</li>
         </ul>
